--- a/style.css
+++ b/style.css
@@ -66,8 +66,37 @@ header {
     font-weight: bold;
 }
 
+.section_1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 30rem;
+    padding: 20px;
+    gap: 20px;
+}
+
+.section_1_images {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0 50px;
+    flex: 1;
+}
+
+.section_1_images > div {
+    display: flex;
+    flex-direction: column;
+}
+
+.section_1_images img {
+    width: 10em;
+    height: 10em;
+    border: 2px solid blue;
+    border-radius: 8px;
+}
+
 .section_2 {
-    height: 25rem;
+    height: 30rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -78,6 +107,17 @@ header {
     color: #1f2937;
 }
 
+.section_2 > div {
+    padding: 0 300px;
+}
+
+.section_2 .quoted {
+    font-size: 24px;
+    font-weight: bold;
+    font-style: normal;
+    float: right;
+}
+
 .section_2 > p {
     padding: 10%;
 }
@@ -86,6 +126,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 6em;
 }
 
 button {
