--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header {
 .section_1 {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     height: 30rem;
     padding: 20px;
@@ -78,18 +78,19 @@ header {
 
 .section_1_images {
     display: flex;
-    justify-content: space-evenly;
-    padding: 0 50px;
-    flex: 1;
+    justify-content: space-between;
+    padding: 0 20vw;
+    width: 50vw;
 }
 
 .section_1_images > div {
     display: flex;
     flex-direction: column;
+    margin: 0 10px;
 }
 
 .section_1_images img {
-    width: 10em;
+    width: 100%;
     height: 10em;
     border: 2px solid blue;
     border-radius: 8px;
@@ -100,7 +101,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     background-color: #E5E7EB;
     font-size: 36px;
     font-style: italic;
@@ -115,11 +116,37 @@ header {
     font-size: 24px;
     font-weight: bold;
     font-style: normal;
-    float: right;
 }
 
 .section_2 > p {
     padding: 10%;
+}
+
+.section_3 {
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5em 20em;
+    background-color: #3882f6;
+    border-radius: 8px;
+    color: #F9FAF8;
+    column-gap: 5em;
+    padding: 2em;
+}
+
+.section_3_content {
+    display: flex;
+    flex-direction: column;
+}
+
+.main_text {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.section_3 > button {
+    border: 2px solid white;
 }
 
 footer {
